<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_printer">

        <ListPreference
            app:key="printer_model"
            app:title="@string/pref_printer_model"
            app:summary="@string/pref_printer_model_summary"
            app:entries="@array/printer_model_entries"
            app:entryValues="@array/printer_model_values"
            app:defaultValue="phaser_3020"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="printer_name"
            app:title="@string/pref_printer_name"
            app:summary="@string/pref_printer_name_summary"
            app:defaultValue="Xerox Phaser 3020"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="printer_ip"
            app:title="@string/pref_printer_ip"
            app:summary="@string/pref_printer_ip_summary"
            app:defaultValue="192.168.1.100"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="find_printer_ip"
            app:title="@string/pref_find_printer_ip"
            app:summary="@string/pref_find_printer_ip_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_diagnostics">

        <Preference
            app:key="scan_document"
            app:title="@string/pref_scan_document"
            app:summary="@string/pref_scan_document_summary" />

        <Preference
            app:key="test_network"
            app:title="@string/pref_test_network"
            app:summary="@string/pref_test_network_summary" />

        <Preference
            app:key="print_test_page"
            app:title="@string/pref_print_test_page"
            app:summary="@string/pref_print_test_page_summary" />

        <Preference
            app:key="print_via_android"
            app:title="@string/pref_print_via_android"
            app:summary="@string/pref_print_via_android_summary" />

        <Preference
            app:key="job_history"
            app:title="@string/pref_job_history"
            app:summary="@string/pref_job_history_summary" />

        <Preference
            app:key="view_logs"
            app:title="@string/pref_view_logs"
            app:summary="@string/pref_view_logs_summary" />

        <Preference
            app:key="run_test_suite"
            app:title="@string/pref_run_test_suite"
            app:summary="@string/pref_run_test_suite_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_instructions">

        <Preference
            app:key="info"
            app:title="@string/pref_info_title"
            app:summary="@string/pref_info_summary"
            app:selectable="false" />

    </PreferenceCategory>

</PreferenceScreen>
